[gd_scene load_steps=4 format=3 uid="uid://csa3o368n80y4"]

[ext_resource type="Script" path="res://Player.gd" id="1_y7yng"]
[ext_resource type="Script" path="res://CardDisplay.gd" id="2_nyx8n"]
[ext_resource type="Texture2D" uid="uid://8ka0a0ya6bo3" path="res://assets/selection.tres" id="3_hxhwm"]

[node name="Player" type="Node2D"]
script = ExtResource("1_y7yng")

[node name="CardDisplay" type="Node2D" parent="."]
script = ExtResource("2_nyx8n")

[node name="Slots" type="Node2D" parent="."]

[node name="Slot1" type="Marker2D" parent="Slots"]
texture_filter = 1
position = Vector2(-262.5, 0)
scale = Vector2(2.5, 2.5)

[node name="Slot2" type="Marker2D" parent="Slots"]
texture_filter = 1
position = Vector2(-87.5, 0)
scale = Vector2(2.5, 2.5)

[node name="Slot3" type="Marker2D" parent="Slots"]
texture_filter = 1
position = Vector2(87.5, 0)
scale = Vector2(2.5, 2.5)

[node name="Slot4" type="Marker2D" parent="Slots"]
texture_filter = 1
position = Vector2(262.5, 0)
scale = Vector2(2.5, 2.5)

[node name="NewCard" type="Marker2D" parent="Slots"]
position = Vector2(0, -225)

[node name="Buttons" type="Node2D" parent="."]

[node name="Button1" type="TextureButton" parent="Buttons"]
texture_filter = 1
offset_left = -345.0
offset_top = -112.5
offset_right = -279.0
offset_bottom = -22.5
scale = Vector2(2.5, 2.5)
disabled = true
texture_hover = ExtResource("3_hxhwm")
metadata/_edit_use_anchors_ = true

[node name="Button2" type="TextureButton" parent="Buttons"]
texture_filter = 1
offset_left = -170.0
offset_top = -112.5
offset_right = -104.0
offset_bottom = -22.5
scale = Vector2(2.5, 2.5)
texture_hover = ExtResource("3_hxhwm")
metadata/_edit_use_anchors_ = true

[node name="Button3" type="TextureButton" parent="Buttons"]
texture_filter = 1
offset_left = 5.0
offset_top = -112.5
offset_right = 71.0
offset_bottom = -22.5
scale = Vector2(2.5, 2.5)
texture_hover = ExtResource("3_hxhwm")
metadata/_edit_use_anchors_ = true

[node name="Button4" type="TextureButton" parent="Buttons"]
texture_filter = 1
offset_left = 180.0
offset_top = -112.5
offset_right = 246.0
offset_bottom = -22.5
scale = Vector2(2.5, 2.5)
texture_hover = ExtResource("3_hxhwm")
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Buttons/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Buttons/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Buttons/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Buttons/Button4" to="." method="_on_button_4_pressed"]
